# grappler

./: .flake8  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml  release.yml
api/bases/: index.html
api/core/: index.html
api/grapplers/: index.html
docs/: index.md  user-guide.md
docs/api/: core.md  grapplers.md
grappler/: __init__.py  _hook.py  _types.py
grappler/grapplers/: __init__.py  _bouncer.py  _composite.py  _entry_point.py  _list.py  _static.py
grappler/grapplers/bases/: __init__.py  _basic.py  _plugin_pair.py
search/: search_index.json
tests/: test_hook.py
tests/grapplers/: conftest.py  test_bouncer_grappler.py  test_composite_grappler.py  test_entry_point_grappler.py  test_static_grappler.py
user-guide/: index.html
